// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginBlockHooks should match snapshot 1`] = `
<div
  className="tribe-common__plugin-block-hook"
>
  <InnerBlocks
    template={
      Array [
        Array [
          "tribe/event-datetime",
          Object {},
        ],
        Array [
          "tribe/event-pro-recurring",
          Object {},
        ],
        Array [
          "tribe/event-pro-exclusion",
          Object {},
        ],
      ]
    }
    templateInsertUpdatesSelection={false}
  />
</div>
`;

exports[`PluginBlockHooks should not hook in unregistered blocks 1`] = `
<div
  className="tribe-common__plugin-block-hook"
>
  <InnerBlocks
    template={
      Array [
        Array [
          "tribe/event-datetime",
          Object {},
        ],
        Array [
          "tribe/event-pro-recurring",
          Object {},
        ],
        Array [
          "tribe/event-pro-exclusion",
          Object {},
        ],
      ]
    }
    templateInsertUpdatesSelection={false}
  />
</div>
`;

exports[`PluginBlockHooks should only render events templates 1`] = `
<div
  className="tribe-common__plugin-block-hook"
>
  <InnerBlocks
    template={
      Array [
        Array [
          "tribe/event-datetime",
          Object {},
        ],
      ]
    }
    templateInsertUpdatesSelection={false}
  />
</div>
`;

exports[`PluginBlockHooks should only render events-pro templates 1`] = `
<div
  className="tribe-common__plugin-block-hook"
>
  <InnerBlocks
    template={
      Array [
        Array [
          "tribe/event-pro-recurring",
          Object {},
        ],
        Array [
          "tribe/event-pro-exclusion",
          Object {},
        ],
      ]
    }
    templateInsertUpdatesSelection={false}
  />
</div>
`;

exports[`PluginBlockHooks should recursively hook blocks 1`] = `
<div
  className="tribe-common__plugin-block-hook"
>
  <InnerBlocks
    template={
      Array [
        Array [
          "tribe/event-pro-recurring",
          Object {},
        ],
        Array [
          "tribe/event-cool-container1",
          Object {},
          Array [
            Array [
              "tribe/event-pro-recurring",
              Object {},
            ],
            Array [
              "tribe/event-cool-container2",
              Object {},
              Array [
                Array [
                  "tribe/event-pro-recurring",
                  Object {},
                ],
              ],
            ],
          ],
        ],
      ]
    }
    templateInsertUpdatesSelection={false}
  />
</div>
`;
